logs/dag_id=testing/run_id=manual__2022-06-15T08:46:31.106156+00:00/task_id=create_table/attempt=2.log
[2022-06-15 08:48:37,413] {taskinstance.py:1159} INFO - Dependencies all met for <TaskInstance: testing.create_table manual__2022-06-15T08:46:31.106156+00:00 [queued]>
[2022-06-15 08:48:37,430] {taskinstance.py:1159} INFO - Dependencies all met for <TaskInstance: testing.create_table manual__2022-06-15T08:46:31.106156+00:00 [queued]>
[2022-06-15 08:48:37,432] {taskinstance.py:1356} INFO - 
--------------------------------------------------------------------------------
[2022-06-15 08:48:37,433] {taskinstance.py:1357} INFO - Starting attempt 2 of 2
[2022-06-15 08:48:37,435] {taskinstance.py:1358} INFO - 
--------------------------------------------------------------------------------
[2022-06-15 08:48:37,461] {taskinstance.py:1377} INFO - Executing <Task(PostgresOperator): create_table> on 2022-06-15 08:46:31.106156+00:00
[2022-06-15 08:48:37,467] {standard_task_runner.py:52} INFO - Started process 8776 to run task
[2022-06-15 08:48:37,483] {standard_task_runner.py:79} INFO - Running: ['***', 'tasks', 'run', 'testing', 'create_table', 'manual__2022-06-15T08:46:31.106156+00:00', '--job-id', '77', '--raw', '--subdir', 'DAGS_FOLDER/create_table.py', '--cfg-path', '/tmp/tmpi4b1pa71', '--error-file', '/tmp/tmp7rjrwz15']
[2022-06-15 08:48:37,487] {standard_task_runner.py:80} INFO - Job 77: Subtask create_table
[2022-06-15 08:48:37,628] {task_command.py:370} INFO - Running <TaskInstance: testing.create_table manual__2022-06-15T08:46:31.106156+00:00 [running]> on host cfddca254c64
[2022-06-15 08:48:37,924] {taskinstance.py:1571} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=testing
AIRFLOW_CTX_TASK_ID=create_table
AIRFLOW_CTX_EXECUTION_DATE=2022-06-15T08:46:31.106156+00:00
AIRFLOW_CTX_TRY_NUMBER=2
AIRFLOW_CTX_DAG_RUN_ID=manual__2022-06-15T08:46:31.106156+00:00
[2022-06-15 08:48:38,004] {base.py:68} INFO - Using connection ID 'postgre_sql' for task execution.
[2022-06-15 08:48:38,059] {dbapi.py:213} INFO - Running statement: 
        DROP TABLE IF EXISTS z1_user;
        CREATE TABLE z1_user(
            user_id INTEGER PRIMARY KEY,
            name VARCHAR(255),
            phonenumber VARCHAR(255),
            email VARCHAR(255),
            address VARCHAR(255),
            work VARCHAR(255),
            other VARCHAR(255),
        ) 
        , parameters: None
[2022-06-15 08:48:38,080] {taskinstance.py:1889} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 92, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 193, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 217, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 11:         ) 
                 ^

[2022-06-15 08:48:38,185] {taskinstance.py:1400} INFO - Marking task as FAILED. dag_id=testing, task_id=create_table, execution_date=20220615T084631, start_date=20220615T084837, end_date=20220615T084838
[2022-06-15 08:48:38,256] {standard_task_runner.py:97} ERROR - Failed to execute job 77 for task create_table (syntax error at or near ")"
LINE 11:         ) 
                 ^
; 8776)
[2022-06-15 08:48:38,320] {local_task_job.py:156} INFO - Task exited with return code 1
[2022-06-15 08:48:38,635] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
